stateDiagram-v2
    state "Waiting for user message" as Waiting
    state "Ready to stream" as Ready
    state "LLM streaming" as Streaming
    state "Waiting for tool responses" as Tools
    state "Stream interrupted" as Interrupted

    [*] --> Waiting

    Waiting --> Ready: User message
    Tools --> Ready: Tool results
    Interrupted --> Ready: User message/Retry

    Ready --> Streaming: Run stream

    Streaming --> Waiting: Complete
    Streaming --> Tools: Tool calls
    Streaming --> Interrupted: Interrupted by user/error during streaming